<resources>
    <string name="app_name">LoginTest</string>
    <string name="login">Login</string>
    <string name="by_signing_in_you_are_agreeing_our">By signing in you are agreeing our</string>
    <string name="term_and_privacy_policy">Term and Privacy Policy</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="login_with_touch">Login with touch</string>
</resources>